final commit - fixed capitals visibility for logged out users & forced clear local stoarge on logout

--- a/thegem-child/style.css
+++ b/thegem-child/style.css
@@ -1,3 +1,27 @@
+/*DO NOT REMOVE*/
+/*DO NOT REMOVE*/
+/*DO NOT REMOVE*/
+/*DO NOT REMOVE*/
+
+/*
+Theme Name: TheGem
+Template: thegem
+Description: Multi-Purpose Wordpress Theme
+Author: Codex Themes.
+Theme URI: http://codex-themes.com/thegem/
+Version: 5.9.7
+Tags: one-column, two-columns, left-sidebar, right-sidebar, custom-background, custom-colors, custom-header, custom-menu, featured-images, flexible-header, full-width-template, theme-options, translation-ready
+License: GNU General Public License
+License URI: license.txt
+Text Domain: thegem
+*/
+
+/*DO NOT REMOVE*/
+/*DO NOT REMOVE*/
+/*DO NOT REMOVE*/
+/*DO NOT REMOVE*/
+
+
 img,iframe,picture,svg,video,button {
 	user-select: none !important;
 }
@@ -7,8 +31,81 @@ body *::selection {
 	color: white !important;
 }
 
+.page-id-2 .entry-content {
+	text-align: center !important;
+}
+
+.page-id-2 .entry-content ul {
+	list-style: none !important;
+	padding-left: 0 !important;
+}
+
+.page-id-2 .breadcrumbs-container {
+	display: none;
+}
+
+.page-id-2 .entry-content code {
+	font-family: 'Poppins' !important;
+}
+
+.hide-for-guests:not(body.logged-in .hide-for-guests), .portfolio-item .requirements:not(body.logged-in .requirements) {
+	display: none !important;
+}
+
+.thegem-te-menu ~ .bordered-box.centered-box.styled-subtitle {
+	display: none !important;
+}
+
 .text-center {
 	text-align: center !important;
+}
+
+.site-footer {
+	padding: 20px !important;
+}
+
+#colophon.site-footer {
+	background-color: #09457a !important;
+}
+
+.site-footer .footer-widget-area {
+	display: flex !important;
+	flex-direction: row-reverse !important;
+}
+
+@media (max-width: 767px) {
+	.site-footer .footer-widget-area {
+		flex-direction: column !important;
+		text-align: center !important;
+	}
+	
+	.site-footer .footer-widget-area .widget {
+		margin: 10px 0 !important;
+		text-align: center !important;
+	}
+}
+
+.site-footer .footer-widget-area .widget {
+	position: static !important;
+}
+
+.site-footer .widget p, .site-footer .widget {
+	margin-bottom: 0 !important;
+	color: white !important;
+}
+
+.site-footer .widget a {
+	color: #00bcd4 !important;
+}
+
+.site-footer .widget a:hover  {
+	color: #fd722e !important;
+}
+
+@media (min-width: 767px) {
+	.site-footer #text-3 {
+		text-align: right;
+	}	
 }
 
 @media (max-width: 560px) {
@@ -26,6 +123,10 @@ body *::selection {
 	.exit-inner-game {
 		display: none;
 	}
+}
+
+.header-sticky {
+	backdrop-filter: blur(6px);
 }
 
 .header-sticky-template .thegem-template-header .vc_row {
@@ -86,8 +187,60 @@ body *::selection {
 
 /* BLOG STYLES */
 
+.blog .entry-title {
+	text-align: center;
+	margin: 10px;
+}
+
+.blog .entry-title * {
+	font-weight: 600 !important;
+}
+
+.single-post .exit-inner-game {
+	display: none !important;
+}
+
+.blog article .post-content-wrapper {
+	border-bottom-left-radius: 30px;
+	border-bottom-right-radius: 30px;
+}
+
+.blog article .post-featured-content *, .blog article .post-content-wrapper {
+	border-top-left-radius: 30px;
+	border-top-right-radius: 30px;
+}
+
 body .blog article .post-featured-content > a::after, body .blog .gem-simple-gallery .gem-gallery-item a::after {
 	content: '\e621' !important;
+}
+
+.justified-style-1 .description .info, .justified-style-2 .description .info {
+	position: static !important;
+	display: flex;
+  width: 100% !important;
+  justify-content: center;
+  padding-top: 10px !important;
+  margin: 0 !important;
+  bottom: 0 !important;
+}
+
+.justified-style-1 .description .info .post-read-more, .justified-style-2 .description .info .post-read-more {
+	margin-top: 25px !important;
+}
+
+.justified-style-1 .description .info .post-read-more .gem-button, .justified-style-2 .description .info .post-read-more .gem-button {
+	border-radius: 3px;
+  font-size: 17px;
+  padding: 15px 25px;
+	border-radius: 15px !important;
+  line-height: 1;
+  display: inline;
+  margin-top: 40px !important;
+	text-transform: uppercase;
+}
+
+.justified-style-2 .post-content-wrapper {
+	padding-bottom: 50px !important;
 }
 
 /* MAIN GAME PAGE STYLES */
@@ -248,15 +401,23 @@ body .blog article .post-featured-content > a::after, body .blog .gem-simple-gal
 
 .portfolio-item:has( div.locked-label) .image-inner > div, .portfolio-item:hover:has( div.locked-label) .image-inner > div {
 	opacity: 0.5;
-  filter: saturate(0) !important;
+  filter: saturate(0);
 }
 
 .portfolio-item:has( .locked-label) .portfolio-image-slider .btn {
-	display: none !important;
+	display: none;
 }
 
 .portfolio-item:has( .coming-soon) .locked-label {
     display: none;
+}
+
+.portfolio-item:has( .coming-soon) .image-inner > div, .portfolio-item:hover:has( .coming-soon) .image-inner > div {
+	filter: none !important;
+}
+
+.portfolio-item:has( .coming-soon) .portfolio-image-slider .btn {
+	display: block !important;
 }
 
 .portfolio-item .image-inner {
@@ -551,13 +712,17 @@ body.single-thegem_pf_item .block-content:last-of-type {
 }
 
 .pojo-a11y-toolbar-toggle {
-	top: 70px;
+	top: 180px;
 }
 
 /* PORTFOLIO PARENT PAGE GRID STYLES */
 
 .gem-button-container:has(+ .locked-label) {
-	display: none !important;
+	display: none;
+}
+
+.portfolio-item:has( .coming-soon) .gem-button-container {
+	display: inline-block !important;
 }
 
 .portfolio-item:has( .coming-soon) .difficulty, .portfolio-item:has( .coming-soon) .points-to-be-rewarded {
